@@ -3,7 +3,7 @@ import org.jlleitschuh.gradle.ktlint.tasks.KtLintCheckTask
 import org.jlleitschuh.gradle.ktlint.tasks.KtLintFormatTask
 
 plugins {
-  id("uk.gov.justice.hmpps.gradle-spring-boot") version "5.4.1"
+  id("uk.gov.justice.hmpps.gradle-spring-boot") version "5.7.0"
   kotlin("plugin.spring") version "1.9.10"
   kotlin("plugin.jpa") version "1.9.10"
   jacoco
@@ -29,7 +29,7 @@ dependencies {
   implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
   implementation("org.springframework.boot:spring-boot-starter-webflux")
   implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-  implementation("uk.gov.justice.service.hmpps:hmpps-sqs-spring-boot-starter:2.0.1")
+  implementation("uk.gov.justice.service.hmpps:hmpps-sqs-spring-boot-starter:2.1.0")
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
 
   implementation("io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:1.25.0")
@@ -45,14 +45,14 @@ dependencies {
   runtimeOnly("org.postgresql:postgresql:42.6.0")
 
   // Test dependencies
-  testImplementation("org.wiremock:wiremock:3.0.3")
+  testImplementation("org.wiremock:wiremock:3.2.0")
   testImplementation("com.h2database:h2")
-  testImplementation("io.jsonwebtoken:jjwt-impl:0.11.5")
-  testImplementation("io.jsonwebtoken:jjwt-jackson:0.11.5")
+  testImplementation("io.jsonwebtoken:jjwt-impl:0.12.0")
+  testImplementation("io.jsonwebtoken:jjwt-jackson:0.12.0")
   testImplementation("org.mockito:mockito-inline:5.2.0")
-  testImplementation("net.javacrumbs.json-unit:json-unit:3.0.0")
-  testImplementation("net.javacrumbs.json-unit:json-unit-assertj:3.0.0")
-  testImplementation("net.javacrumbs.json-unit:json-unit-json-path:3.0.0")
+  testImplementation("net.javacrumbs.json-unit:json-unit:3.2.2")
+  testImplementation("net.javacrumbs.json-unit:json-unit-assertj:3.2.2")
+  testImplementation("net.javacrumbs.json-unit:json-unit-json-path:3.2.2")
   testImplementation("org.springframework.security:spring-security-test")
   testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
@@ -63,39 +63,44 @@ java {
 
 tasks {
   withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
-    dependsOn("buildPrisonApiModel")
+    dependsOn("buildPrisonApiModel", "buildNonAssociationsApiModel")
     kotlinOptions {
       jvmTarget = "18"
     }
   }
   withType<KtLintCheckTask> {
     // Under gradle 8 we must declare the dependency here, even if we're not going to be linting the model
-    mustRunAfter("buildPrisonApiModel")
+    mustRunAfter("buildPrisonApiModel", "buildNonAssociationsApiModel")
   }
   withType<KtLintFormatTask> {
     // Under gradle 8 we must declare the dependency here, even if we're not going to be linting the model
-    mustRunAfter("buildPrisonApiModel")
+    mustRunAfter("buildPrisonApiModel", "buildNonAssociationsApiModel")
   }
 }
+
+val configValues = mapOf(
+  "dateLibrary" to "java8-localdatetime",
+  "serializationLibrary" to "jackson",
+  "useBeanValidation" to "false",
+  "enumPropertyNaming" to "UPPERCASE"
+)
 
 tasks.register("buildPrisonApiModel", org.openapitools.generator.gradle.plugin.tasks.GenerateTask::class) {
   generatorName.set("kotlin-spring")
   inputSpec.set("openapi-specs/prison-api.json")
   outputDir.set("$buildDir/generated")
   modelPackage.set("uk.gov.justice.digital.hmpps.hmppsactivitiesmanagementapi.client.prisonapi.model")
-  configOptions.set(
-    mapOf(
-      "dateLibrary" to "java8-localdatetime",
-      "serializationLibrary" to "jackson",
-      "useBeanValidation" to "false",
-      "enumPropertyNaming" to "UPPERCASE"
-    )
-  )
-  globalProperties.set(
-    mapOf(
-      "models" to ""
-    )
-  )
+  configOptions.set(configValues)
+  globalProperties.set(mapOf("models" to ""))
+}
+
+tasks.register("buildNonAssociationsApiModel", org.openapitools.generator.gradle.plugin.tasks.GenerateTask::class) {
+  generatorName.set("kotlin-spring")
+  inputSpec.set("openapi-specs/non-associations-api.json")
+  outputDir.set("$buildDir/generated")
+  modelPackage.set("uk.gov.justice.digital.hmpps.hmppsactivitiesmanagementapi.client.nonassociationsapi.model")
+  configOptions.set(configValues)
+  globalProperties.set(mapOf("models" to ""))
 }
 
 kotlin {
@@ -112,6 +117,8 @@ val integrationTest = task<Test>("integrationTest") {
   description = "Integration tests"
   group = "verification"
   shouldRunAfter("test")
+  // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
+  jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
 }
 
 tasks.named<Test>("integrationTest") {
